--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,161 +1,209 @@
-.navbar {
-  background: linear-gradient(to right, #8e2de2, #4a00e0);
-  border: 0.5px solid #8e2de2;
+.nav{
+
   display: flex;
-  justify-content: center ;
+  justify-content: space-evenly !important;
+  background-color: var(--color-secondary);
+  z-index: 3;
 }
+.nav-item{
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
 .container-nav{
-  padding: 10px;
-  display: flex !important;
-  justify-content: center !important; 
+  margin: 0 !important;
+  padding: 0 !important;
 }
-.pixeledit{
-  color: white !important;
-  background: linear-gradient(to right, #8e2de2, #4a00e0) !important;
-  border: 0.5px solid #9956d4 !important;
-  border-radius: 7px;
-}
-.pixeledit:hover{
-  background: linear-gradient(to right, #8e2de2, #4a00e0);
-  border: 0.5px solid #8e2de2;
-  border-radius: 15px;
-  transition: all 300ms;
-  color: white;
-  scale: 1.1;
-
-}
-
-.nav-links{
-  color:white;
-  
-  background: linear-gradient(to right, #8e2de2, #4a00e0) !important;
-  border-radius: 7px;
-  border: 0.5px solid #9956d4 !important;
-}
-.nav-links:hover{
-  background: linear-gradient(to right, #8e2de2, #4a00e0);
-  border: 0.5px solid #8e2de2;
-  border-radius: 15px;
-  transition: all 300ms;
-  color: white !important;
-  scale: 1.1;
-}
-.dropdown-menu{
-  background:linear-gradient(to right, #651ca5, #4103be);
-}
-.drop-link{
-  color: rgb(255, 255, 255);
-  border: none;
-  padding: 0;
-  margin: 0;
-}
-.drop-link:hover{
-  background-color: #1c1c1d;
-  color: white;
-  transition: all 300ms;
-}
-#basic-nav-dropdown{
-  color: white;
-  background: linear-gradient(to right, #8e2de2, #4a00e0) !important;
-  border: 0.5px solid #9956d4 !important;
-  border-radius: 7px;
-}
-#basic-nav-dropdown:hover{
-  background: linear-gradient(to right, #8e2de2, #4a00e0);
-  border: 0.5px solid #8e2de2;
-  border-radius: 15px;
-  transition: all 300ms;
-  color: white !important;
-  transition: all 300ms;
-  scale: 1.1;
-}
-
-.button-cart{
-  color: white;
-  background: linear-gradient(to right, #8e2de2, #4a00e0) !important;
-  border: 1px solid #9956d4 ;
-  border-radius: 20px;
-  margin: -50px 30px;
-  
-}
-.button-cart:hover{
-  scale: 1.1;
-  background: linear-gradient(to right, #ac6de4, #4a00e0) !important;
-  transition: all 300ms;
-}
-
-/* Estilos.css (o tu archivo de estilos global) */
-
-.cart-notification {
-  position: relative;
-top: 0;
-right: 10;
-background-color: #b807ee;
-color: white;
-border-radius: 50%;
-padding: 0.2rem 0.5rem;
-font-size: 0.8rem;
-margin-right: 4px; /* Ajusta según tus necesidades */
-}
-
-
-.video-cart{
-  padding: 0;
-  width: 75px;
-  height: 75px;
-  background: transparent;
-}
-.a-video-cart{
-  margin: 0;
-  
-}
-.switch{
-  position: relative;
-  left: -20px;
-}
-.div-main {
-  padding-top: 150px;
+.logo-name{
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 60%; 
-  margin: auto;
+}
+.logo-name:hover{
+  scale: 1.2;
+  transition: 200ms all;
+  text-shadow: 3px 3px 15px var(--color-buttons);
+}
+.logo-name:active{
+  transform: translateY(7px)
+}
+
+.cart-item:hover{
+  filter: drop-shadow(0 0 10px var(--color-buttons));
+  transition: 300ms all;
+  scale: 1.1;
+}
+.cart-item:active{
+  transform: translateY(10px);
+}
+.cart-white{
+  width: 30px;
+  height: 30px;
+  align-items: center;
+  cursor: pointer;
+}
+/*button nav*/
+.button-nav {
+  padding: 5px 15px;
+  border-radius: 50px;
+  cursor: pointer;
+  border: 0;
+  background-color: #1c0942;
+  box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 12px;
+  transition: all 0.2s ease;
+}
+
+.button-nav:hover {
+  letter-spacing: 2px;
+  background-color:  var(--color-buttons);
+  color: hsl(0, 0%, 100%);
+  box-shadow:  var(--color-buttons) 0px 1px 35px 0px;
+}
+
+.button-nav:active {
+  letter-spacing: 3px;
+  background-color: var(--color-buttons);
+  color: hsl(0, 0%, 100%);
+  box-shadow:  var(--color-buttons) 0px 0px 0px 0px;
+  transform: translateY(10px);
+  transition: 100ms;
+}
+/*button nav*/
+
+/*toggle de la nav*/
+.checkbox {
+  display: none;
+}
+
+.slider {
+  width: 60px;
+  height: 30px;
+  background-color: var(--color-buttons);
+  border-radius: 20px;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  border: 4px solid transparent;
+  transition: .3s;
+  box-shadow: 0 0 10px 0 rgb(0, 0, 0, 0.25) inset;
+  cursor: pointer;
+}
+
+.slider::before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  transform: translateX(-30px);
+  border-radius: 20px;
+  transition: .3s;
+  box-shadow: 0 0 10px 3px rgb(0, 0, 0, 0.25);
+}
+
+.checkbox:checked ~ .slider::before {
+  transform: translateX(30px);
+  box-shadow: 0 0 10px 3px rgb(0, 0, 0, 0.25);
+}
+
+.checkbox:checked ~ .slider {
+  background-color: #4a00e0;
+}
+
+.checkbox:active ~ .slider::before {
+  transform: translate(0);
+}
+/*toggle de la nav*/
+
+/*navbar secondary*/
+.nav-secondary{
+  
+  background: #130231;
+}
+.ul-secondary{
+  display: flex;
+  gap: 50px;
+  justify-content: center;
+  cursor: pointer;
+  
+}
+.ul-secondary li{
+  padding: 5px 15px;
+  border-radius: 50px;
+  cursor: pointer;
+  border: 0;
+  background-color: #1c0942;
+  box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 12px;
+  transition: all 0.2s ease;
+}
+.ul-secondary li:hover{
+  letter-spacing: 2px;
+  background-color:  var(--color-buttons);
+  color: hsl(0, 0%, 100%);
+  box-shadow:  var(--color-buttons) 0px 1px 35px 0px;
+}
+.ul-secondary li:active{
+  letter-spacing: 3px;
+  background-color: var(--color-buttons);
+  color: hsl(0, 0%, 100%);
+  box-shadow:  var(--color-buttons) 0px 0px 0px 0px;
+  transform: translateY(10px);
+  transition: 100ms;
+}
+/*navbar secondary*/
+
+/*header*/
+.video-container{
   position: relative;
-  z-index: 2;
+  width: 100%;
+  height: 50vh;
+  overflow: hidden;
+  z-index: 1;
+}
+
+
+.cart-link{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cart-notification {
+
+  top: 0;
+  right: 0;
+  background-color:var(--color-buttons);
+  color: #fff; 
+  border-radius: 50%;
+  padding: 1px 7.5px; 
+  margin-left: 3px;
+  font-size: 12px; 
+}
+
+
+.div-main {
+  position: absolute;
+  top: 35%; /* Ajusta según sea necesario */
+  left: 50%; /* Ajusta según sea necesario */
+  transform: translate(-50%, -50%); /* Centra el div-main en el medio del video */
+  text-align: center;
+  z-index: 2; /* Asegura que este índice sea más alto que el del video */
+  color: white; 
 }
 
 
 #main-container {
-  min-height: 100vh;
+  min-height: 40vh;
   position: relative;
-
 }
 
-
-.button-nav {
-  color: white;
-  background: #000;
-  border: 0.5px solid #8e2de2;
-
-}
-
-.button-nav:hover {
-  background: linear-gradient(to right, #8e2de2, #4a00e0);
-  border: 0.5px solid #8e2de2;
-
-}
-
-.capa {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #1c1c1d;
-  opacity: 0.5;
-  mix-blend-mode: overlay;
-}
 
 .button-header {
   position: relative;
@@ -166,7 +214,7 @@ margin-right: 4px; /* Ajusta según tus necesidades */
   border-radius: 0.8em;
   cursor: pointer;
   border: none;
-  background: linear-gradient(to right, #8e2de2, #4a00e0);
+  background: linear-gradient(to right, var(--color-buttons), var(--color-secondary));
   color: ghostwhite;
   overflow: hidden;
 }
@@ -216,7 +264,7 @@ margin-right: 4px; /* Ajusta según tus necesidades */
   display: flex;
   justify-content: center;
   position: relative;
-  bottom: 350px;
+  bottom:200px;
 }
 
 /*cards*/
@@ -233,6 +281,111 @@ margin-right: 4px; /* Ajusta según tus necesidades */
   transition: all 300ms;
   filter: saturate(2);
 }
+
+
+.card-container{
+  padding: 0px 15px;
+  width: auto;
+  border: 1px solid  transparent;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 2px 2px  20px var(--color-secondary);
+}
+.grid-item{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px; 
+  margin-top: 3em;
+  padding: 0px 10px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.card-container-product {
+  width: 200px;
+  height: 200px;
+  position: relative;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.card-product {
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+}
+
+.card-product .front-content-product {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1)
+}
+
+.card-product .front-content-product p {
+  font-size: 18px;
+  font-weight: 700;
+  opacity: 1;
+  background: #fff ;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1)
+}
+
+.card-product .content-product {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 10px;
+  background: linear-gradient(to right, var(--color-secondary), var(--color-buttons));
+  color: #e8e8e8;
+  padding: 20px;
+  line-height: 1.1;
+  border-radius: 5px;
+  pointer-events: none;
+  transform: translateY(96%);
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+  
+}
+
+.card-product .content-product .heading-product {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.card-product:hover .content-product {
+  transform: translateY(0);
+}
+
+.card-product:hover .front-content-product {
+  transform: translateY(-10%);
+}
+
+.card-product:hover .front-content-product p {
+  opacity: 0;
+}
+
+
+
+.button-service{
+  width: auto;
+  margin: 0;
+  padding: 8px;
+
+}
+
 .cards {
   display: flex;
   flex-wrap: wrap; /* Permite que los elementos se muevan a la siguiente fila en pantallas pequeñas */
@@ -248,7 +401,7 @@ margin-right: 4px; /* Ajusta según tus necesidades */
   background-color: #000;
   display: flex;
   flex-direction: column;
-  justify-content: end;
+  justify-content: flex-end;
   border-radius: 8px;
   color: white;
   margin: 30px;
@@ -281,12 +434,12 @@ margin-right: 4px; /* Ajusta según tus necesidades */
 }
 
 
+
 .button-pack{
-  background: linear-gradient(to right, #8e2de2, #00a0e0) !important;
-  border: 1px solid #8e2de2;
+  background: linear-gradient(to right, var(--color-secondary), var(--color-buttons)) !important;
   border-radius: 7px;
   color: white;
-  padding: 2px;
+  padding: 4px;
   margin-bottom: 3px;
 }
 
@@ -364,88 +517,9 @@ margin-right: 4px; /* Ajusta según tus necesidades */
   bottom: 79px;
 }
 
-/*toggle*/
-/* The switch - the box around the slider */
-.switch {
-  font-size: 17px;
-  position: relative;
-  display: inline-block;
-  width: 3.5em;
-  height: 2em;
-}
 
-/* Hide default HTML checkbox */
-
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-  
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #223243;
-  transition: .4s;
-  border-radius: 30px;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 1.4em;
-  width: 1.4em;
-  border-radius: 20px;
-  left: 0.3em;
-  bottom: 0.3em;
-  background-color: #223243;
-  box-shadow: inset 2px -2px 0 1.8px #fff;
-  transition: .4s;
-  animation: anima1 0.3s linear;
-}
-
-@keyframes anima1 {
-  0% {
-      transform: translateX(1.5em);
-  }
-
-  80% {
-      transform: translateX(-0.3em);
-  }
-
-  100% {
-      transform: translateX(0em);
-  }
-}
-
-.switch input:checked+.slider:before {
-  background-color: rgb(0, 217, 255);
-  box-shadow: none;
-  transform: translateX(1.5em);
-  animation: anima 0.3s linear;
-}
-
-@keyframes anima {
-  0% {
-      transform: translateX(0px)
-  }
-
-  80% {
-      transform: translateX(1.6em)
-  }
-
-  100% {
-      transform: translateX(1.4em)
-  }
-}
 .footer-border{
-  background: linear-gradient(to right, #8e2de2, #4a00e0);
+  background: var(--color-secondary);
   border: 0.5px solid #8e2de2;
 }
 
