--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,20 +1,54 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+:root{
+  --bg-gradient:linear-gradient(to right, #8e2de2, #4a00e0);
+  --color-primary:#050327;
+  --color-secondary: #a30481;
+  --color-buttons:#03b4fa;
+}
+
+
+
+::-webkit-scrollbar {
+  width: 10px; 
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-buttons); 
+  border-radius: 6px; 
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--color-primary);
+}
+
 * {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
   color: #fff;
   box-sizing: border-box;
+  
 }
-
+h1{
+  font-size: 1.4em;
+    font-weight: 700;
+}
+h2{
+  font-size: 1.3em;
+}
 a {
-  color: #fff;
+  color: #fff !important;
   margin: 0 15px;
   text-decoration: none;
   list-style: none;
+  text-shadow: 2px 3px 6px rgba(0, 0, 0, 0.5)
 }
 
 body {
-  background-color: rgb(7, 1, 36);
+  background-color: var(--color-primary);
 }
 
 footer {
@@ -28,10 +62,7 @@ footer {
 }
 
 video {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 50%;
+  height: 100%;
   object-fit: cover;
 }
