--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -529,3 +529,234 @@
   justify-content: center;
   margin-top: 10px;
 }
+
+/*item-products*/
+.form-container {
+  width: 30%;
+  background: linear-gradient(#212121, #212121) padding-box,
+              linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
+  border: 2px solid transparent;
+  padding: 32px 24px;
+  font-size: 14px;
+  font-family: inherit;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  box-sizing: border-box;
+  border-radius: 16px;
+}
+
+.form-container button:active {
+  scale: 0.95;
+}
+
+.form-container .form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.form-container .form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+.form-container .form-group label {
+  display: block;
+  margin-bottom: 5px;
+  color: #fff;
+  font-weight: 600;
+  font-size: 12px;
+}
+
+.form-container .form-group input {
+  width: 100%;
+  padding: 12px 16px;
+  border-radius: 8px;
+  color: #fff;
+  font-family: inherit;
+  background-color: transparent;
+  border: 1px solid #414141;
+}
+
+.form-container .form-group textarea {
+  width: 100%;
+  padding: 12px 16px;
+  border-radius: 8px;
+  resize: none;
+  color: #fff;
+  height: 96px;
+  border: 1px solid #414141;
+  background-color: transparent;
+  font-family: inherit;
+}
+
+.form-container .form-group input::placeholder {
+  opacity: 0.5;
+}
+
+.form-container .form-group input:focus {
+  outline: none;
+  border-color: #e81cff;
+}
+
+.form-container .form-group textarea:focus {
+  outline: none;
+  border-color: #e81cff;
+}
+
+.form-container .form-submit-btn {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  align-self: flex-start;
+  font-family: inherit;
+  color: #fff;
+  font-weight: 400;
+  width: 40%;
+  background: var(--color-buttons);
+  border: 1px solid #414141;
+  padding: 6px 12px;
+  font-size: inherit;
+  gap: 8px;
+  margin-top: 8px;
+  cursor: pointer;
+  border-radius: 6px;
+}
+
+.form-container .form-submit-btn:hover {
+  background-color:  #2a0c58;
+  scale: 1.1;
+  transition: all 300ms;
+}
+
+.item-content{
+  display: flex;
+  justify-content: center;
+padding: 40px 40px;
+
+}
+.item-video{
+  width: 50%;
+}
+/*item-products-upload*/
+.upload {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 2px solid var(--color-buttons);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+.upload:hover{
+  background-color:  #2a0c58;
+  transition: all 300ms;
+  scale: 1.2;
+}
+.icon {
+  font-size: 1.7rem;
+  cursor: pointer;
+}
+.icon:hover{
+  scale: 1.2;
+  transition: 300ms all;
+}
+
+.upload-input {
+  position: absolute;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer !important;
+}
+
+
+.button-upload{
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
+.p-item{
+  width: 90%;
+  padding-top: 3%;
+}
+.h2-item{
+  text-align: center;
+  background-color: var(--color-secondary);
+  border: 1px solid var(--color-secondary);
+  width: 20%;
+  border-radius: 10px;
+  margin-bottom: 15px;
+  text-shadow: 1px 2px 5px black;
+}
+
+
+/*button increment and decrement*/
+.button-cart-container{
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  color: black;
+  align-items: center;
+  text-align: center;
+  color: white;
+}
+.button-cart{
+  font-size: 900;
+background-color:  var(--color-buttons) !important;
+padding: 10px;
+margin: 10px;
+border-radius: 20px;
+}
+.button-cart:hover{
+  text-shadow: 1px 2px 5px var(--color-buttons);
+  scale: 1.2;
+  transition: all 300ms;
+  background-color: #2a0c58 !important;
+}
+.span-cart{
+
+  justify-content: center !important;
+  text-align: center !important;
+  align-items: center !important;
+}
+
+.button-reset,.p-button-cart{
+  font-weight: 900;
+  
+}
+.button-reset{
+  background-color: var(--color-buttons) !important;
+  border-radius: 10px;
+  padding: 4px;
+}
+.button-reset:hover{
+  text-shadow: 1px 2px 5px var(--color-secondary);
+  scale: 1.2;
+  transition: all 300ms;
+  background-color: #2a0c58 !important;
+}
+.price-cart{
+  font-weight: 900;
+  justify-content: center;
+  display: flex;
+  color: yellow;
+}
+.div-logo-form{
+  display: flex;
+  justify-content: center;
+}
+.logo-form{
+  width: 70px;
+}
+.logo-form:hover{
+  scale: 1.2;
+  transition: all 300ms;
+  filter: saturate(2);
+}
