--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -19,10 +19,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  color: var(--text-color-white);
 }
 .logo-name:hover{
   scale: 1.2;
   transition: 200ms all;
+  color: var(--text-color-white);
   text-shadow: 3px 3px 15px var(--color-buttons);
 }
 .logo-name:active{
@@ -120,13 +122,17 @@
 /*toggle de la nav*/
 
 /*navbar secondary*/
+.h2-nav-secondary{
+  display: flex;
+  justify-content: center;
+}
 .nav-secondary{
   
   background: #130231;
 }
 .ul-secondary{
   display: flex;
-  gap: 50px;
+
   justify-content: center;
   cursor: pointer;
   
@@ -180,7 +186,7 @@
   top: 0;
   right: 0;
   background-color:var(--color-buttons);
-  color: #fff; 
+  color: var(--text-color-white); 
   border-radius: 50%;
   padding: 1px 7.5px; 
   margin-left: 3px;
@@ -195,7 +201,7 @@
   transform: translate(-50%, -50%); /* Centra el div-main en el medio del video */
   text-align: center;
   z-index: 2; /* Asegura que este índice sea más alto que el del video */
-  color: white; 
+  color: var(--text-color-white); 
 }
 
 
@@ -215,7 +221,7 @@
   cursor: pointer;
   border: none;
   background: linear-gradient(to right, var(--color-buttons), var(--color-secondary));
-  color: ghostwhite;
+  color: var(--text-color-white);
   overflow: hidden;
 }
 
@@ -350,7 +356,7 @@
   text-align: center;
   gap: 10px;
   background: linear-gradient(to right, var(--color-secondary), var(--color-buttons));
-  color: #e8e8e8;
+  color: var(--text-color-white);
   padding: 20px;
   line-height: 1.1;
   border-radius: 5px;
@@ -403,7 +409,7 @@
   flex-direction: column;
   justify-content: flex-end;
   border-radius: 8px;
-  color: white;
+  color: var(--text-color-white);
   margin: 30px;
   text-align: center;
 }
@@ -438,7 +444,7 @@
 .button-pack{
   background: linear-gradient(to right, var(--color-secondary), var(--color-buttons)) !important;
   border-radius: 7px;
-  color: white;
+  color: var(--text-color-white);
   padding: 4px;
   margin-bottom: 3px;
 }
@@ -532,21 +538,26 @@
 
 /*item-products*/
 .form-container {
-  width: 30%;
+  width: 28%;
   background: linear-gradient(#212121, #212121) padding-box,
               linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
   border: 2px solid transparent;
   padding: 32px 24px;
   font-size: 14px;
   font-family: inherit;
-  color: white;
+  color: var(--text-color-white);
   display: flex;
   flex-direction: column;
   gap: 20px;
   box-sizing: border-box;
   border-radius: 16px;
 }
-
+.section-form{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 0px;
+}
 .form-container button:active {
   scale: 0.95;
 }
@@ -566,7 +577,7 @@
 .form-container .form-group label {
   display: block;
   margin-bottom: 5px;
-  color: #fff;
+  color: var(--text-color-white);
   font-weight: 600;
   font-size: 12px;
 }
@@ -575,7 +586,7 @@
   width: 100%;
   padding: 12px 16px;
   border-radius: 8px;
-  color: #fff;
+  color: var(--text-color-white);
   font-family: inherit;
   background-color: transparent;
   border: 1px solid #414141;
@@ -586,7 +597,7 @@
   padding: 12px 16px;
   border-radius: 8px;
   resize: none;
-  color: #fff;
+  color: var(--text-color-white);
   height: 96px;
   border: 1px solid #414141;
   background-color: transparent;
@@ -613,7 +624,7 @@
   justify-content: center;
   align-self: flex-start;
   font-family: inherit;
-  color: #fff;
+  color: var(--text-color-white);
   font-weight: 400;
   width: 40%;
   background: var(--color-buttons);
@@ -632,15 +643,26 @@
   transition: all 300ms;
 }
 
+.item-video{
+  display: flex;
+  flex-direction: column;
+  justify-content: center ;
+  align-items: center;
+}
+
+.item-grand-content{
+  display: flex;
+  justify-content: center ;
+  
+}
 .item-content{
   display: flex;
   justify-content: center;
-padding: 40px 40px;
+  flex-direction: column  ;
+
 
 }
-.item-video{
-  width: 50%;
-}
+
 /*item-products-upload*/
 .upload {
   position: relative;
@@ -683,10 +705,15 @@ padding: 40px 40px;
 }
 
 .p-item{
-  width: 90%;
-  padding-top: 3%;
+  border: 1px solid var(--color-secondary);
+  border-radius: 20px;
+  padding: 5px;
+  margin-top: 3% ;
+  font-weight: 900;
+  font-size: 0.9em;
 }
 .h2-item{
+  margin-top: 20px;
   text-align: center;
   background-color: var(--color-secondary);
   border: 1px solid var(--color-secondary);
@@ -696,18 +723,29 @@ padding: 40px 40px;
   text-shadow: 1px 2px 5px black;
 }
 
-
+.h2-cart-item{
+  font-size: 900;
+  font-weight: 900;
+  margin: 2em 0px;
+}
 /*button increment and decrement*/
 .button-cart-container{
   display: flex;
   gap: 20px;
-  justify-content: center;
   color: black;
   align-items: center;
   text-align: center;
-  color: white;
+  color: var(--text-color-white);
+  margin: 0px 140px;
+  background-color: #1c0942;
+  border-radius: 20px;
+  margin: 20px;
+  padding: 0px 10px;
+  
+  
 }
 .button-cart{
+  
   font-size: 900;
 background-color:  var(--color-buttons) !important;
 padding: 10px;
@@ -729,8 +767,8 @@ border-radius: 20px;
 
 .button-reset,.p-button-cart{
   font-weight: 900;
-  
 }
+
 .button-reset{
   background-color: var(--color-buttons) !important;
   border-radius: 10px;
@@ -746,7 +784,7 @@ border-radius: 20px;
   font-weight: 900;
   justify-content: center;
   display: flex;
-  color: yellow;
+  color: var(--text-color-white);
 }
 .div-logo-form{
   display: flex;
@@ -759,4 +797,458 @@ border-radius: 20px;
   scale: 1.2;
   transition: all 300ms;
   filter: saturate(2);
+}
+
+/*itemcart*/
+.itemcart-product-content{
+ max-width: 60%;
+}
+.itemcart-product{
+  display: flex;
+  text-align: center;
+  border-radius: 40px;
+  width: auto;
+  background-color: var(--color-secondary);
+  margin: 20px 0px
+}
+.itemcart-td{
+  padding: 5px 10px;
+  border-radius: 50px;
+  cursor: pointer;
+  background-color: #1c0942;
+  box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 12px;
+  transition: all 0.2s ease;
+}
+
+.total-price{
+  display: flex;
+  border-radius: 20px;
+  background-color: var(--color-secondary);
+  width: max-content;
+  padding: 0px 10px;
+}
+.total-price-content{
+  display: flex;
+  padding: 15px 15px;
+  
+}
+
+.delete-item{
+  width: 30px;
+  height: 30px;
+  background-color: #1c0942;
+  fill: var(--color-buttons);
+  border-radius: 20px;
+  padding: 3px;
+  
+}
+.button-delete-container{
+  display: flex;
+  justify-content: flex-end;
+}
+
+
+@keyframes blink {
+  0% {
+    background-color: var(--color-primary);
+  }
+  25% {
+    background-color: var(--color-primary);
+  }
+  50% {
+    background-color: var(--color-secondary);
+  }
+  100% {
+    background-color: var(--color-primary);
+  }
+}
+.title-cart-effect{
+  animation: blink 3s infinite;
+  justify-content: top;
+}
+.buttons-item-cart{
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 1em;
+}
+
+
+.Toastify__progress-bar {
+  background: var(--color-buttons) !important;
+}
+
+svg{
+  fill: var(--color-buttons) !important;
+}
+
+
+.Toastify__progress-bar--success{
+  background: var(--color-secondary);
+}
+/*Nosotros*/
+
+
+.nosotros-container {
+  
+  margin: 0 auto;
+  padding-left: 20px;
+}
+
+.social-nosotros, .social-media {
+  margin-bottom: 20px;
+}
+
+.h2-nosotros, .h3-nosotros {
+
+width: max-content;
+padding: 0px 20px;
+border-radius: 15px;
+margin: 10px;
+background-color: var(--color-secondary);
+font-weight: 900;
+text-shadow: 10px 10px 10px 10px black;
+}
+
+
+.p-nosotros {
+font-weight: 400;
+font-family: bold;
+}
+.ul-nosotros{
+  padding-left: 10px;
+}
+.ul-nosotros, ul {
+  list-style-type: none;
+  padding: 0;
+  margin-left: 20px
+}
+
+.li-nosotros {
+  padding-left: 10px;
+  margin-bottom: 10px;
+  list-style-type: disc;
+  font-weight: 900;
+  
+}
+.li-nosotros:hover {
+  
+  background-color: var(--color-secondary);
+  transition: 300ms all ease;
+  cursor: pointer;
+  width: max-content;
+  border-radius: 20px;
+  padding: 0px 20px;
+}
+
+.social-media h2 {
+  margin-top: 20px;
+}
+/*error404*/
+.notfound-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.img-404{
+  width: 30% !important;
+}
+.logo-h2{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 280px;
+}
+.logo-404{
+width: 20%;
+justify-content: center;
+}
+.logo-404:hover{
+scale: 1.3;
+filter: brightness(120%);
+transition: 300ms all ease;
+}
+/*red social- nosotros*/
+.red-social-circle{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 0px;
+}
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+
+}
+
+.up {
+  display: flex;
+  flex-direction: row;
+
+}
+
+.down {
+  display: flex;
+  flex-direction: row;
+
+}
+
+.card1 {
+  width: 90px;
+  height: 90px;
+  outline: none;
+  border: none;
+  background: white;
+  border-radius: 90px 5px 5px 5px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  transition: .2s ease-in-out;
+}
+
+.instagram {
+  margin-top: 1.5em;
+  margin-left: 1.2em;
+  fill: #cc39a4;
+}
+.ig{
+  width: 35%;
+  position: relative;
+  left: 36px;
+  top: 5px;
+}
+
+.card2 {
+  width: 90px;
+  height: 90px;
+  outline: none;
+  border: none;
+  background: white;
+  border-radius: 5px 90px 5px 5px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  transition: .2s ease-in-out;
+  position: relative;
+  right: 16px;
+}
+
+.facebook {
+  margin-top: 1.5em;
+  margin-left: -.9em;
+  fill: #03A9F4;
+}
+.fb{
+  width: 40%;
+  position: relative;
+  left: 20px;
+}
+
+.card3 {
+  width: 90px;
+  height: 90px;
+  outline: none;
+  border: none;
+  background: white;
+  border-radius: 5px 5px 5px 90px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  transition: .2s ease-in-out;
+  
+}
+
+.whatsapp {
+  margin-top: -.6em;
+  margin-left: 1.2em;
+  fill: #00ff00;
+}
+.wp{
+  justify-content: center;
+  width: 35%;
+  position: relative;
+  bottom: 4px;
+  left: 39px;
+  
+}
+.card4 {
+  width: 90px;
+  height: 90px;
+  outline: none;
+  border: none;
+  background: white;
+  border-radius: 5px 5px 90px 5px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  transition: .2s ease-in-out;
+  position: relative;
+  right: 16px;
+}
+
+.tiktok {
+  margin-top: -.9em;
+  margin-left: -1.2em;
+  fill: #f14336;
+}
+.tk{
+  width: 45%;
+  position: relative;
+  left: 15px;
+  bottom: 5px;
+}
+
+.card1:hover {
+  cursor: pointer;
+  scale: 1.1;
+  background-color: #fc62d3;
+}
+
+.card1:hover .instagram {
+  fill: white;
+}
+
+.card2:hover {
+  cursor: pointer;
+  scale: 1.1;
+  background-color: #1877f2;
+}
+
+.card2:hover .facebook {
+  fill: white;
+}
+
+.card3:hover {
+  cursor: pointer;
+  scale: 1.1;
+  background-color: #00ff00;
+}
+
+.card3:hover .whatsapp {
+  fill: white;
+}
+
+.card4:hover {
+  cursor: pointer;
+  scale: 1.1;
+  background-color: #00f7ff;
+}
+
+.card4:hover .gmail {
+  fill: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+/*media querys*/
+@media only screen and (min-width: 755px) and (max-width: 1628px) {
+ .form-container{
+  width: auto;
+ }
+}
+@media only screen and (min-width: 448px) and (max-width: 754px) {
+  .ul-secondary{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    cursor: pointer;
+    
+    
+  }
+  .div-main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .ul-secondary a{
+    display: flex;
+    justify-content: center;
+    
+  }
+  .button-header span{
+    padding: 0.4em 0.6em 0.4em 0.65em;
+    justify-content: center;
+  }
+  .h1-header{
+    font-size: 1.2em;
+  }
+  .video-item{
+      width: 90% !important;
+      height: 90% !important;
+
+  }
+  .h2-item{
+    width: 90%;
+  }
+  .form-container{
+    width: 90%;
+  }
+  .itemcart-product-content {
+    max-width: 100%;
+  }
+  /* Estilos específicos para dispositivos con una resolución entre 448px y 754px */
+}
+@media only screen and (min-width: 260px) and (max-width: 447px){
+  .ul-secondary{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    cursor: pointer;
+    
+    
+  }
+  .div-main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .ul-secondary a{
+    display: flex;
+    justify-content: center;
+    
+  }
+  .button-header span{
+    padding: 0.4em 0.6em 0.4em 0.65em;
+    justify-content: center;
+  }
+  .h1-header{
+    font-size: 1.2em;
+  }
+  .h2-packs{
+    font-size: 1em;
+  }
+  .logo{
+    width: 65px;
+    height: 65px;
+  }
+  .video-item{
+    width: 90% !important;
+    height: 90% !important;
+}
+.h2-item{
+  width: 90%;
+}
+.button-cart-container{
+  gap: 0px;
+  font-size: 0.8em;
+}
+.form-container{
+  width: 96%;
+}
+.itemcart-product-content {
+  max-width: 100%;
+}
+td{
+  padding: 0;
+}
+.buttons-item-cart {
+  padding-left: 0;
+}
+a{
+  margin: 0;
+}
 }
