--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,8 +5,10 @@
 :root{
   --bg-gradient:linear-gradient(to right, #8e2de2, #4a00e0);
   --color-primary:#050327;
-  --color-secondary: #a30481;
+  --color-secondary: #79045f;
   --color-buttons:#03b4fa;
+  --text-color-black: #050327;
+  --text-color-white: #fff;
 }
 
 
@@ -28,7 +30,7 @@
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  color: #fff;
+  color: var(--text-color-white);
   box-sizing: border-box;
   
 }
@@ -56,7 +58,7 @@ footer {
 }
 footer {
   background-color: #000000;
-  color: #fff;
+  color: var(--text-color-white);
   padding: 20px;
   text-align: center;
 }
@@ -66,3 +68,12 @@ video {
   height: 100%;
   object-fit: cover;
 }
+td{
+  padding: 1em;
+}
+
+.video-item{
+  width: 800px;
+  height: 500px;
+}
+
