--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,10 +5,20 @@
 :root{
   --bg-gradient:linear-gradient(to right, #8e2de2, #4a00e0);
   --color-primary:#050327;
-  --color-secondary: #79045f;
+  --color-secondary: #6e23af;
   --color-buttons:#03b4fa;
   --text-color-black: #050327;
   --text-color-white: #fff;
+}
+
+/*dark mode*/
+:root.dark-mode {
+  --bg-gradient: linear-gradient(to right, #20025a, #0f0518);
+  --color-primary: #050327;
+  --color-secondary: #6e28ac;
+  --color-buttons: #8e2de2;
+  --text-color-black: #fff;
+  --text-color-white: #ffffff;
 }
 
 
